fixing all sonar issues